Bug#48113 : Ndb : Insert hitting DD space exhaustion does not lock following tuple ops