storage/ndb/src/kernel/blocks/dbtup/DbtupExecQuery.cpp
@@ -1342,6 +1342,7 @@ int Dbtup::handleInsertReq(Signal* signal,
                      regTabPtr->m_attributes[MM].m_no_of_dynamic);
   bool varalloc = vardynsize || regTabPtr->m_bits & Tablerec::TR_ForceVarPart;
   bool rowid = req_struct->m_use_rowid;
+  bool update_acc = false; 
   Uint32 real_page_id = regOperPtr.p->m_tuple_location.m_page_no;
   Uint32 frag_page_id = req_struct->frag_page_id;
 
@@ -1543,17 +1544,12 @@ int Dbtup::handleInsertReq(Signal* signal,
       }
     }
     real_page_id = regOperPtr.p->m_tuple_location.m_page_no;
-    regOperPtr.p->m_tuple_location.m_page_no= frag_page_id;
-    c_lqh->accminupdate(signal,
-			regOperPtr.p->userpointer,
-			&regOperPtr.p->m_tuple_location);
+    update_acc = true; /* Will be updated later once success is known */
     
     base = (Tuple_header*)ptr;
     base->m_operation_ptr_i= regOperPtr.i;
     base->m_header_bits= Tuple_header::ALLOC |
       (vardynsize ? Tuple_header::VAR_PART : 0);
-
-    regOperPtr.p->m_tuple_location.m_page_no = real_page_id;
   }
   else 
   {
@@ -1609,6 +1605,25 @@ int Dbtup::handleInsertReq(Signal* signal,
     Tuple_header* disk_ptr= req_struct->m_disk_ptr;
     disk_ptr->m_header_bits = 0;
     disk_ptr->m_base_record_ref= ref.ref();
+  }
+
+  /* Have been successful with disk + mem, update ACC to point to
+   * new record if necessary
+   * Failures in disk alloc will skip this part
+   */
+  if (update_acc)
+  {
+    /* Acc stores the local key with the frag_page_id rather
+     * than the real_page_id
+     */
+    ndbassert(regOperPtr.p->m_tuple_location.m_page_no == real_page_id);
+
+    Local_key accKey = regOperPtr.p->m_tuple_location;
+    accKey.m_page_no = frag_page_id;
+
+    c_lqh->accminupdate(signal,
+                        regOperPtr.p->userpointer,
+                        &accKey);
   }
   
   if (regTabPtr->m_bits & Tablerec::TR_Checksum) 
